--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: Digital Rain Modern C++ Project Blog
 author:
-  name: Michelle Lynch
-  email: your-email@domain.com
-description: "A blog."
+  name: Ciara Crowe
+  email: CiaraC03
+description: "A blog of my work"
 
 # Build settings
 remote_theme: jekyll/minima
